# powercord-ext-honeypot

./: .gitignore  README.md  __init__.py  blueprint.py  cog.py  extension.json  extension.just  justfile  pyproject.toml  pytest_output.txt  routes.py  sprocket.py  widget.py
alembic/versions/: honey0001_initial_honeypot.py
tests/: conftest.py  test_honeypot.py  test_honeypot_integration.py
tests/integration/: test_honeypot_integration.py
tests/unit/: test_honeypot.py
